--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+
   <title>Postager</title>
+  
 </head>
 <body>
 </body>
